# fastcached

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  AGENT.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  TODO.md  mkdocs.yml  vcpkg.json
.agent/: README.md  architecture.md  cpp-guidelines.md  databases.md  testing.md
.github/workflows/: build.yml  ci-probe.yml
bench/: README.md  fastcached_bench.py  plots.py  profile_large_get.py  protocols.py  quick_large_throughput.py  report.py  requirements-plots.txt  runner.py  servers.py  summarize_vs.py  termviz.py  workloads.py
cmake/: CPM.cmake  ClangTidy.cmake  Coverage.cmake  Packaging.cmake  PedanticCompiler.cmake  Sanitizers.cmake  Version.cmake  cache.cmake  license.rtf
docs/: index.md  requirements.txt
docs/about/: license.md
docs/commands/: index.md
docs/getting-started/: install.md  quickstart.md
docs/internals/: architecture.md  storage-primitives.md
docs/operations/: deployment.md  known-limitations.md
docs/protocols/: autodetect.md  binary-opcodes.md  compatibility-with-upstream.md  coverage-matrix.md  memcached-binary.md  memcached-meta.md  memcached-text.md  meta-flags-reference.md  overview.md  redis-resp.md  status-codes.md
scripts/: sccache-smoke.ps1  sccache-smoke.sh  tls-smoke.ps1  tls-smoke.sh
src/CowTree/: BasicCowTree_test.cpp  CMakeLists.txt  CrashConsistency_test.cpp  Crc32c_test.cpp  FilePageStore_test.cpp  InMemoryPageStore_test.cpp  Meta_test.cpp  PageLayout_test.cpp  README.md  test_main.cpp
src/CowTree/CowTree/: Bytes.hpp  CowTree.cpp  CowTree.hpp  Crc32c.cpp  Crc32c.hpp  Errors.hpp  FilePageStore.cpp  FilePageStore.hpp  IPageStore.hpp  InMemoryPageStore.cpp  InMemoryPageStore.hpp  Meta.cpp  Meta.hpp  PageId.hpp  PageLayout.cpp  PageLayout.hpp
src/FastCache/: CMakeLists.txt
src/FastCache/Async/: Cancellation.hpp  EpollReactor.cpp  EpollReactor.hpp  IReactor.hpp  IocpReactor.cpp  IocpReactor.hpp  IocpReactor_test.cpp  KqueueReactor.cpp  KqueueReactor.hpp  ResumeOn.hpp  SleepUntil.hpp  SleepUntil_test.cpp  Task.hpp  Task_test.cpp  TestReactor.cpp  TestReactor.hpp  TestReactor_test.cpp
src/FastCache/Auth/: AuthPolicy.cpp  AuthPolicy.hpp  AuthPolicy_test.cpp
src/FastCache/Cache/: CacheEngine.cpp  CacheEngine.hpp  CacheEngine_test.cpp  CacheEntry.hpp  CowTreeStorage.cpp  CowTreeStorage.hpp  CowTreeStorage_test.cpp  DiskStorage.cpp  DiskStorage.hpp  DiskStorage_test.cpp  IStorage.hpp  IStorageMutationObserver.hpp  InMemoryLruStorage.cpp  InMemoryLruStorage.hpp  InMemoryLruStorage_test.cpp  LayeredStorage.cpp  LayeredStorage.hpp  LayeredStorage_test.cpp  NotifyingStorage.cpp  NotifyingStorage.hpp  NotifyingStorage_test.cpp  SetCodec.hpp  ShardedStorage.cpp  ShardedStorage.hpp  ShardedStorage_test.cpp  SharedValue.hpp  SharedValue_test.cpp  StorageTestUtils.hpp  StreamCodec.hpp  StreamCodec_test.cpp  TracingStorage.cpp  TracingStorage.hpp  TracingStorage_test.cpp
src/FastCache/Config/: ByteSize.cpp  ByteSize.hpp  ByteSize_test.cpp  CliParser.cpp  CliParser.hpp  CliParser_test.cpp  Config.hpp  ConfigMerge.cpp  ConfigMerge.hpp  ConfigMerge_test.cpp  ConfigReloader.cpp  ConfigReloader.hpp  ConfigReloader_test.cpp  YamlReader.cpp  YamlReader.hpp  YamlReader_test.cpp
src/FastCache/Core/: BufferPool.cpp  BufferPool.hpp  BufferPool_test.cpp  Bytes.hpp  Clock.hpp  Clock_test.cpp  Crc32c.cpp  Crc32c.hpp  Crc32c_test.cpp  Endian.hpp  Logger.cpp  Logger.hpp  Logger_test.cpp  Owner.hpp  Profiling.hpp  Profiling_test.cpp  StringHash.hpp  Version.hpp.in
src/FastCache/Core/Errors/: ConfigError.hpp  NetError.hpp  ProtocolError.hpp  StorageError.hpp
src/FastCache/Metrics/: IMetricsSink.hpp  PrometheusFormatter.cpp  PrometheusFormatter.hpp  PrometheusFormatter_test.cpp
src/FastCache/Net/: BlockingSocket.cpp  BlockingSocket.hpp  EpollSocket.cpp  EpollSocket.hpp  EpollSocket_test.cpp  HealthProbe.cpp  HealthProbe.hpp  HealthProbe_test.cpp  IAdmissionControl.hpp  IListener.hpp  ISocket.hpp  InMemoryTransport.cpp  InMemoryTransport.hpp  InMemoryTransport_test.cpp  IoAwaitable_test.cpp  IocpSocket.cpp  IocpSocket.hpp  IocpSocket_test.cpp  KqueueSocket.cpp  KqueueSocket.hpp  SocketAddress.cpp  SocketAddress.hpp  SocketAddress_test.cpp  TlsContext.cpp  TlsContext.hpp  TlsContext_test.cpp  TlsSocket.cpp  TlsSocket.hpp  TlsSocket_test.cpp  TlsWrap.hpp
src/FastCache/Net/Framing/: LineReader.cpp  LineReader.hpp  LineReader_test.cpp
src/FastCache/Platform/: CpuAffinity.cpp  CpuAffinity.hpp  DaemonControls.cpp  DaemonControls.hpp  HostMemory.cpp  HostMemory.hpp  IDaemonHost.hpp  ISignalSource.hpp  PosixDaemonHost.cpp  ServiceControl.cpp  ServiceControl.hpp  ServiceControl_test.cpp  Terminal.cpp  Terminal.hpp  Terminal_test.cpp  WindowsServiceHost.cpp
src/FastCache/Protocol/: IProtocolHandler.hpp  IPubSubRegistry.hpp  IStreamWaiterRegistry.hpp  KeyspaceNotifier.cpp  KeyspaceNotifier.hpp  KeyspaceNotifier_test.cpp  MemcachedBinary.cpp  MemcachedBinary.hpp  MemcachedBinary_test.cpp  MemcachedMeta.cpp  MemcachedMeta.hpp  MemcachedMeta_test.cpp  MemcachedShared.hpp  MemcachedText.cpp  MemcachedText.hpp  MemcachedText_test.cpp  ProtocolAutodetect.cpp  ProtocolAutodetect.hpp  PubSubRegistry.cpp  PubSubRegistry.hpp  PubSubRegistry_test.cpp  RedisMutationObserver.cpp  RedisMutationObserver.hpp  RedisResp.cpp  RedisResp.hpp  RedisRespDetail.hpp  RedisRespDetail_test.cpp  RedisResp_test.cpp  RedisTransaction.cpp  RedisTransaction.hpp  RedisTransaction_test.cpp  SessionContext.hpp  StreamWaiterRegistry.cpp  StreamWaiterRegistry.hpp  StreamWaiterRegistry_test.cpp
src/FastCache/Server/: AdminHttpServer.cpp  AdminHttpServer.hpp  AdminHttpServer_test.cpp  BlockingServerLoop.cpp  BlockingServerLoop.hpp  Connection.cpp  Connection.hpp  PooledServerLoop.cpp  PooledServerLoop.hpp  PooledServerLoop_test.cpp  ReactorServerLoop.cpp  ReactorServerLoop.hpp  ReactorServerLoop_test.cpp  Server.cpp  Server.hpp  Server_test.cpp
src/fastcached/: main.cpp
src/tests/: CMakeLists.txt  test_main.cpp
testdata/tls/: README.md  server.crt  server.key
(+49 files in other folders)
